# code_index_mcp

./: .gitignore  CLAUDE.md  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
specs/001-build-a-codebase/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-codebase/contracts/: mcp-resources.json  mcp-tools.json  response-schemas.json
src/: config.rs  lib.rs  main.rs
src/lib/cli_interface/: mod.rs
src/lib/cpp_indexer/: clang_parser.rs  incremental.rs  mod.rs  symbol_extractor.rs  tree_sitter_parser.rs
src/lib/mcp_server/: mod.rs  resource_handlers.rs  server.rs  tool_handlers.rs  transport.rs
src/lib/storage/: connection.rs  mod.rs  repository.rs  schema.rs
src/lib/storage/models/: code_element.rs  code_index.rs  file_metadata.rs  mcp_query_session.rs  mod.rs  symbol_relationships.rs
test-data/sample-cpp/: CMakeLists.txt  README.md
test-data/sample-cpp/include/: advanced_math.h  calculator.h
test-data/sample-cpp/lib/: utils.c  utils.h
test-data/sample-cpp/src/: calculator.cpp  main.cpp
tests/: integration_tests.rs
tests/contract/: mod.rs  test_delete_index.rs  test_file_symbols.rs  test_find_references.rs  test_index_codebase.rs  test_list_indices.rs  test_search_symbols.rs  test_symbol_details.rs  test_update_file.rs
tests/integration/: mod.rs  test_incremental_update.rs  test_installation.rs  test_mcp_protocol.rs  test_menu_interface.rs  test_performance.rs  test_sample_indexing.rs
