[package]
name = "cpp-index-mcp"
version = "0.1.0"
edition = "2021"
description = "C++ codebase indexing MCP server with Tree-sitter and LibClang support"
license = "MIT"
authors = ["Generated with Claude Code"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.29", features = ["bundled", "functions", "chrono"] }

# C++ Parsing
tree-sitter = "0.20"
tree-sitter-cpp = "0.20"
clang-sys = "1.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI and I/O
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.3"
notify = "6.0"

# Hashing for incremental updates
sha2 = "0.10"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# System utilities
num_cpus = "1.0"
clang = "2.0.0"

# MCP SDK (placeholder - will need actual crate when available)
# mcp-rust-sdk = { git = "https://github.com/modelcontextprotocol/rust-sdk" }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "cpp_index_mcp"
path = "src/lib.rs"

[[bin]]
name = "cpp-index-mcp"
path = "src/main.rs"
